Add message post form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Chat APP</title>
   </head>
   <body>
-    <p>chat app</p>
+    <form autocomplete="off">
+      <input type="text" id="message" placeholder="your message...">
+    </form>
 
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-firestore.js"></script>
