Render messages with Firebase data

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Chat APP</title>
   </head>
   <body>
+    <ul id="messages"></ul>
     <form autocomplete="off">
       <input type="text" id="message" placeholder="your message...">
     </form>
