--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Chat APP</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <h1>Firebae Chat</h1>
     <ul id="messages"></ul>
     <form autocomplete="off">
       <input type="text" id="message" placeholder="your message...">
