--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>Firebae Chat</h1>
+    <h1>
+      <button id="login">Login</button>
+      <button id="logout" class="hidden">Logout</button>
+      Firebae Chat
+    </h1>
     <ul id="messages"></ul>
-    <form autocomplete="off">
+    <form autocomplete="off" class="hidden">
       <input type="text" id="message" placeholder="your message...">
     </form>
 
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
