--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
   </body>
 </html>
